fix gap between header__img and features section

--- a/styles.css
+++ b/styles.css
@@ -1291,7 +1291,7 @@ footer ul {
   }
 
   .header__img {
-    margin-bottom: 64px;
+    margin-bottom: 32px;
   }
 
   .services {
